--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
 
     <div class="container pt-2 pb-5" data-aos ="slide-down">
-        <img src="kiii.png" alt="k3" class="Title">
+        <img src="./kiii.png" alt="k3" class="Title">
     </div>
     <div class="Section-1" data-aos="zoom-out" data-aos-delay="200" >
       <div class="container mb-5 pb-5">
