--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <h3>Aliens Want My Dog!</h3>
             <a href = "https://koveriii.itch.io/aliens-want-my-dogs"><img src = "awmd.png" alt="awmd" class="img-fluid" /></a>
           </div>
+          <div class="col-xl">
+            <h3>Space Smoothie</h3>
+            <a href = "https://koveriii.itch.io/space-smoothie"><img src = "space.png" alt="awmd" class="img-fluid" /></a>
+          </div>
         </div>
       </div>
     </div>
