--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               I'm also proficient 
               in front-end development. HTML, CSS, JavaScript,
               Bootstrap, ReactJS. Making the UX and UI
-              better is crucial. But, I also always try to bring my vision to life.
+              better is crucial. However, I also always try to bring my vision to life.
               
             </h6>  
           </div>
@@ -95,16 +95,16 @@
         </div>
         <div class="row text-center pb-5">
           <div class="col-xl pb-2">
+            <h3>Space Smoothie</h3>
+            <a href = "https://koveriii.itch.io/space-smoothie"><img src = "space.png" alt="space" class="img-fluid" /></a>
+          </div>
+          <div class="col-xl">
             <h3>Graviton Gal</h3>
             <a href ="https://koveriii.itch.io/graviton-gal-proto-webgl"><img src = "gg.png" alt="gg" class="img-fluid" /></a>
           </div>
           <div class="col-xl">
             <h3>Aliens Want My Dog!</h3>
             <a href = "https://koveriii.itch.io/aliens-want-my-dogs"><img src = "awmd.png" alt="awmd" class="img-fluid" /></a>
-          </div>
-          <div class="col-xl">
-            <h3>Space Smoothie</h3>
-            <a href = "https://koveriii.itch.io/space-smoothie"><img src = "space.png" alt="awmd" class="img-fluid" /></a>
           </div>
         </div>
       </div>
