--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@
         </div>
         <div class="row text-center pb-5">
           <div class="col-xl pb-2">
+            <h3>Starzon Space Delivery</h3>
+            <a href = "https://koveriii.itch.io/starzon-space-delivery"><img src = "starzon.png" alt="awmd" class="img-fluid" /></a>
+          </div>
+          <div class="col-xl">
             <h3>Space Smoothie</h3>
             <a href = "https://koveriii.itch.io/space-smoothie"><img src = "space.png" alt="space" class="img-fluid" /></a>
           </div>
-          <div class="col-xl">
+
+        </div>
+        <div class="row text-center pb-5">
+          <div class="col-xl pb-2">
             <h3>Graviton Gal</h3>
             <a href ="https://koveriii.itch.io/graviton-gal-proto-webgl"><img src = "gg.png" alt="gg" class="img-fluid" /></a>
           </div>
